--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Books For All</title>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/book-favicon.svg" />
+    <meta name="description" content="Discover and explore amazing books" />
   </head>
   <body>
     <div id="root"></div>
